syntax = "proto3";

package pb;

import "post_like/post_like.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message PutPostLikeRequest {
    string post_id = 1;
    LikeValue value = 2;
}

message PutPostLikeResponse {
    PostLike post_like = 1;
}


